# hedgehog-site

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
alembic/: env.py
backend/: .gitignore  alembic.ini  pre_start.py  pyproject.toml
backend/app/: __main__.py
backend/app/db/: base_class.py  session.py
backend/app/models/: books.py
backend/app/static/sass/: tome.scss
config/: __init__.py
db/: base.py
frontend/: .gitignore  .prettierrc  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/: content.config.ts
frontend/src/components/: AudioPlayer.ts  AudioPlayer.vue  BookVolume.astro  Footer.astro  Header.astro
frontend/src/content/volumes/: 1.json  2.json
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: utils.ts
frontend/src/pages/: index.astro
frontend/src/pages/volumes/: [page].astro
frontend/src/styles/: globals.css
routes/misc/: __init__.py
static/css/: audioplayer.css  audioplayer.css.map  index.css  index.css.map  styles.css  styles.css.map  tome.css  tome.css.map
static/js/: base.js
static/sass/: audioplayer.scss  index.scss  styles.scss  tome.scss
static/ts/: base.ts
templates/: base.html  index.html  tome.html
templates/utils/: audioplayer.html
