[tool.poetry]
name = "hedgehog"
version = "0.1.0"
description = ""
authors = ["megared <mredikf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
pydantic = "^2.5.3"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

